--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=flight-service
 
 server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/flightdata?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=flightuser
 spring.datasource.password=flightuser
 #spring.jpa.hibernate.ddl-auto=create
