--- a/flight-service/src/main/resources/application.properties
+++ b/flight-service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?useSSL=false&serverTi
 spring.datasource.username=flightuser
 spring.datasource.password=flightuser
 #spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
